--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <shopping-list item="null" id="list" style="color:green"></shopping-list>
     <button onClick="bac()">Click me</button>
     <script src="main.js"></script> -->
-    <link rel="stylesheet" href="../src/style.scss">
+    <link rel="stylesheet" href="./src/style.scss">
     <section id ="header">
           <div class="logo">
             <i class="logo-img fas fa-star"></i>
@@ -94,6 +94,6 @@
        
     </div>
     </section>
-   <script src="../src/main.js"></script>
+   <script src="./src/main.js"></script>
 </body>
 </html>
