--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <shopping-list item="null" id="list" style="color:green"></shopping-list>
     <button onClick="bac()">Click me</button>
     <script src="main.js"></script> -->
-    <link rel="stylesheet" href="./src/style.scss">
+    <link rel="stylesheet" href="/dist/style.css">
     <section id ="header">
           <div class="logo">
-            <i class="logo-img fas fa-star"></i>
+            <a href="/"><i class="logo-img fas fa-star"></i></a>
           </div>
           <!-- <nav class="navbar"> -->
           <ul class="nav-links">
@@ -94,6 +94,6 @@
        
     </div>
     </section>
-   <script src="./src/main.js"></script>
+   <script src="dist/bundle.js"></script>
 </body>
 </html>
