--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <shopping-list item="null" id="list" style="color:green"></shopping-list>
     <button onClick="bac()">Click me</button>
     <script src="main.js"></script> -->
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="dist/style.css">
     <section id ="header">
           <div class="logo">
             <a href="/"><i class="logo-img fas fa-star"></i></a>
