--- a/index.html
+++ b/index.html
@@ -10,44 +10,42 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="shopping-list.js"></script>
-    <shopping-list item="null" id="list" style="color:green"></shopping-list>
-    <button onClick="bac()">Click me</button>
-    <script src="main.js"></script> -->
     <link rel="stylesheet" href="dist/style.css">
     <section id ="header">
-          <div class="logo">
-            <a href="/"><i class="logo-img fas fa-star"></i></a>
-          </div>
-          <!-- <nav class="navbar"> -->
-          <ul class="nav-links">
-              <li class="nav-link search">
-                  <input type="text" id="search-bar" placeholder="search" onkeyup="setTimeout(ShoppingList.searchProduct(),1500)">
-              </li>
-              <li class="cart nav-link" href="#cart" onclick="openCartPage()">
-                  <i id="cart-add" class="fas fa-shopping-cart">
-                </i></li>
-          </ul>
-      <!-- </nav> -->
     </section>
     <section id ="main-body">
         <section class="mobile-view">
         <section class="mob-filter">
-             <a data-toggle="modal" data-target="#filterModal"><i class="icon fas fa-filter"></i>Filter</a>
+             <a data-toggle="modal" id="filterbtn" data-target="#filterModal"><i class="icon fas fa-filter"></i>Filter</a>
         </section>
         <section class="mob-sort">
            <a data-toggle="modal" data-target="#sortModal"><i class="icon fas fa-sort"></i>Sort</a>
         </section>
         </section>
         <section id ="filter">
-                  Filter
+            <div class="filter-title">Filters</div>
+                  <div class="content">
+                    <div id="my-slider" se-min="0" se-step="1" se-min-value="0" se-max-value="1000" se-max="1000" class="slider">
+                      <div class="slider-touch-left">
+                        <span></span>
+                      </div>
+                      <div class="slider-touch-right">
+                        <span></span>
+                      </div>
+                      <div class="slider-line">
+                        <span></span>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="result">Min Price: 0           Max Price: 1000</div>
+                  <button id="filterApplyBtn">Apply</button>
         </section>
         <section id="shopping-list">
             <section id="sort">
-                <ul class="sort-links">Sort By
-                    <li class="sort-link"><a onClick="ShoppingList.sortItemList(1)">Price--- Low to High</a></li>
-                    <li class="sort-link"><a onClick="ShoppingList.sortItemList(2)">Price--- High to Low</a></li>
-                    <li class="sort-link"><a onClick="ShoppingList.sortItemList(3)">Discount</a></li>
+                <ul class="sort-links"><span class="sort-title">Sort By</span>
+                    <li class="sort-link"><a id="sortLowToHigh" >Price--- Low to High</a></li>
+                    <li class="sort-link"><a id="sortHighToLow">Price--- High to Low</a></li>
+                    <li class="sort-link"><a id="sortDiscount">Discount</a></li>
                 </ul>
             </section>
             <section id ="shopping-items"></section>
@@ -58,7 +56,22 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">Filter Options</div>
-                <div class="modal-body"></div>
+                <div class="modal-body">
+                    <div class="content">
+                        <div id="modal-slider" se-min="0" se-step="1" se-min-value="10" se-max-value="800" se-max="1000" class="slider">
+                          <div class="slider-touch-left">
+                            <span></span>
+                          </div>
+                          <div class="slider-touch-right">
+                            <span></span>
+                          </div>
+                          <div class="slider-line">
+                            <span></span>
+                          </div>
+                        </div>
+                      </div>
+                      <div id="result-modal">Min: 0 Max: 1000</div>
+                </div>
                 <div class="modal-btn modal-footer">
                     <div data-dismiss="modal">Cancel</div><div id="filterApply" data-dismiss="modal">Apply</div>
                 </div>
@@ -80,7 +93,7 @@
                     <label for="discount">Discount</label><br>
                 </div>
                 <div class="modal-btn modal-footer">
-                    <div data-dismiss="modal">Cancel</div><div id="sortApply" onclick="callSortFunction()" data-dismiss="modal">Apply</div>
+                    <div data-dismiss="modal">Cancel</div><div id="sortApply" data-dismiss="modal">Apply</div>
                 </div>
             </div>
         </div>
