--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <title>Cart App</title>
 </head>
 <body>
     <link rel="stylesheet" href="dist/style.css">
@@ -37,7 +37,7 @@
                       </div>
                     </div>
                   </div>
-                  <div id="result">Min Price: 0           Max Price: 1000</div>
+                  <div id="result">Min Price: <i class="fas fa-rupee-sign">0</i> Max Price: <i class="fas fa-rupee-sign">1000</i></div>
                   <button id="filterApplyBtn">Apply</button>
         </section>
         <section id="shopping-list">
