--- a/index.html
+++ b/index.html
@@ -108,5 +108,8 @@
     </div>
     </section>
    <script src="dist/bundle.js"></script>
+   <footer>
+     <div id="footer">@copyright</div>
+   </footer>
 </body>
 </html>
