--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </section>
     <section id ="main-body">
         <section class="mobile-view">
-        <section class="mob-filter">
+        <section class="mobile-view__filter">
              <a data-toggle="modal" id="filterbtn" data-target="#filterModal"><i class="icon fas fa-filter"></i>Filter</a>
         </section>
-        <section class="mob-sort">
+        <section class="mobile-view__sort">
            <a data-toggle="modal" data-target="#sortModal"><i class="icon fas fa-sort"></i>Sort</a>
         </section>
         </section>
